# huamulan-agent

./: .dockerignore  .env.docker.example  .gitignore  .woodpecker.yml  AGENTS.md  Agent工程平台建设报告.md  CICD.md  CLAUDE.md  README.md  docker-compose.yml  harness analysis.md  otel.md  otel架构.md  package-lock.json  skill测评未来规划.md  存储技术方案选型.md  工程化兜底.md  技术方案报告.md  演进方向.md  评测报告.md  路由.md
backend/: .env.example  Dockerfile  _append_doc.py  apm_payload.json  gen_payload.py  pyproject.toml  temp_apm_input.json  temp_patrol_input.json
backend/scripts/: alerts_batch_example.json  import_knowledge.py  run_ab_test.py  trigger_otel_alert.ps1  trigger_otel_alert.py  trigger_p0.sh  trigger_p1.sh  trigger_p2.sh  trigger_p3.sh
backend/tests/: conftest.py  test_ab_test.py  test_agent_context_compaction.py  test_agent_evaluation_diagnostics.py  test_agent_evaluation_models.py  test_agent_evaluation_quality.py  test_agent_evaluation_safety.py  test_agent_split.py  test_agent_traces.py  test_alert_consumer.py  test_alert_ingress_guard.py  test_alert_persistence.py  test_apm_observability.py  test_apm_realistic_fixtures.py  test_approval_routing.py  test_basic_tools.py  test_basic_tools_agent.py  test_budget.py  test_cache.py  test_cached_memory.py  test_checkpoint_replay.py  test_checkpoint_serde.py  test_child_agent_protocol.py  test_cicd_pipeline.py  test_config.py  test_context_compaction.py  test_evaluation_ops.py  test_execution_logs.py  test_feishu_notifier.py  test_feishu_stream.py  test_find_skills_project_install.py  test_governance_policy.py  test_hooks.py  test_incidents.py  (+45 more)
(+320 files in other folders)
