[project]
name = "personal-assistant-backend"
version = "0.1.0"
description = "LangGraph personal assistant backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",
  "psycopg[binary,pool]>=3.2.0",
  "watchfiles>=0.24.0",
  "pyyaml>=6.0",
  "langfuse>=3.0.0",
  "langchain-deepseek>=1.1.0",
  "redis>=5.0.0",
  "kafka-python>=2.0.0",
  "langchain>=1.3.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
